Ajout des fonctionnalité ajouter des joueur et modification de leur pseudo sur la page tournamentManagement

--- a/html/formLogin.html
+++ b/html/formLogin.html
@@ -26,12 +26,12 @@
       </div>
       <div class="containerFormLogin">
         <form action="" method="">
-          <label for="userLogin">Nom d'utilisateur :</label>
+          <label for="userLogin">Adresse E-mail :</label>
           <input
             type="text"
             name="user"
             id="userLogin"
-            placeholder="Utilisateur"
+            placeholder="Adresse E-mail"
             required
           />
           <label for="passwordLogin">Mot de passe :</label>
