--- a/html/tournamentSheet.html
+++ b/html/tournamentSheet.html
@@ -90,7 +90,6 @@
         </ul>
       </nav>
 
-
       <!-- LISTE LATERAL DES PARTICIPANT VISIBLE UNIQUEMENT EN VERSION tablette/desktop -->
 
       <div class="container-list-sub-desktop">
@@ -116,7 +115,7 @@
             <img
               src="../assets/img/General/arrow-down-sign-to-navigate.png"
               alt="fleche pour ouvrir et fermer la fenetre des parametre"
-              class="dropdown "
+              class="dropdown"
             />
           </div>
           <div class="container-info-description">
@@ -202,7 +201,7 @@
             <img
               src="../assets/img/General/arrow-down-sign-to-navigate.png"
               alt="fleche pour ouvrir et fermer la fenetre des parametre"
-              class="dropdown "
+              class="dropdown"
             />
           </div>
           <div class="structure-tournament">
@@ -215,44 +214,47 @@
       </div>
     </main>
 
+    <!-- DEBUT FOOTER -->
+    <footer>
+      <div class="container-footer">
+        <div class="contact">
+          <h3>Contactez-nous</h3>
+          <div class="divider-footer"></div>
+          <p>Adresse Postale: 21 rue des geek 75001 Paris</p>
+          <p>Email : Admin-gt@gaming-tournament.com</p>
+          <p>Téléphone : 01.51.52.41.42. 43</p>
+          <a
+            href="https://www.legalstart.fr/fiches-pratiques/proteger-une-creation/mentions-legales/"
+            target="_blank"
+            class="block"
+            >Mention-légales</a
+          >
+          <a
+            href="https://www.legalstart.fr/fiches-pratiques/relations-commerciales/politique-confidentialite/"
+            target="_blank"
+            class="block"
+            >Politique de confidentialité</a
+          >
+          <a href="https://www.facebook.com/?locale=fr_FR" target="_blank">
+            <img src="../assets/img/General/facebook.png" alt="Icone facebook"
+          /></a>
+          <a href="https://www.instagram.com" target="_blank">
+            <img
+              src="../assets/img/General/instagram.png"
+              alt="Icone instagram"
+          /></a>
+          <a href="https://x.com/?lang=fr" target="_blank">
+            <img src="../assets/img/General/twitter.png" alt="Icone twitter"
+          /></a>
+        </div>
+
+        <div class="copyright">
+          <p>© 2024 GamingTournament, Incorporation. Tous droit réservés</p>
+        </div>
+      </div>
+    </footer>
+
     <script src="../assets/javascript/tournamentSheet.js"></script>
     <script src="../assets/javascript/animationNavbar.js"></script>
   </body>
-  <!-- DEBUT FOOTER -->
-  <footer>
-    <div class="container-footer">
-      <div class="contact">
-        <h3>Contactez-nous</h3>
-        <div class="divider-footer"></div>
-        <p>Adresse Postale: 21 rue des geek 75001 Paris</p>
-        <p>Email : Admin-gt@gaming-tournament.com</p>
-        <p>Téléphone : 01.51.52.41.42. 43</p>
-        <a
-          href="https://www.legalstart.fr/fiches-pratiques/proteger-une-creation/mentions-legales/"
-          target="_blank"
-          class="block"
-          >Mention-légales</a
-        >
-        <a
-          href="https://www.legalstart.fr/fiches-pratiques/relations-commerciales/politique-confidentialite/"
-          target="_blank"
-          class="block"
-          >Politique de confidentialité</a
-        >
-        <a href="https://www.facebook.com/?locale=fr_FR" target="_blank">
-          <img src="../assets/img/General/facebook.png" alt="Icone facebook"
-        /></a>
-        <a href="https://www.instagram.com" target="_blank">
-          <img src="../assets/img/General/instagram.png" alt="Icone instagram"
-        /></a>
-        <a href="https://x.com/?lang=fr" target="_blank">
-          <img src="../assets/img/General/twitter.png" alt="Icone twitter"
-        /></a>
-      </div>
-
-      <div class="copyright">
-        <p>© 2024 GamingTournament, Incorporation. Tous droit réservés</p>
-      </div>
-    </div>
-  </footer>
 </html>
