--- a/html/tournamentSheet.html
+++ b/html/tournamentSheet.html
@@ -14,6 +14,7 @@
     <!----------------------------------- -->
     <link rel="stylesheet" href="../assets/css/navbar.css" />
     <link rel="stylesheet" href="../assets/css/tournamentSheet.css" />
+    <link rel="stylesheet" href="../assets/css/tournamentTree.css" />
   </head>
   <body>
     <header>
@@ -205,10 +206,178 @@
             />
           </div>
           <div class="structure-tournament">
-            <img
-              src="../assets/img/General/exempleArbreTournois.png"
-              alt="exemple de structure"
-            />
+            <div class="main-container-tree-tournament">
+              <div class="main-container-round-title">
+                <div class="container-round-title">
+                  <div class="round-title">
+                    <h5>Round 1</h5>
+                  </div>
+                </div>
+                <div class="container-round-title">
+                  <div class="round-title">
+                    <h5>Quart de final</h5>
+                  </div>
+                </div>
+                <div class="container-round-title">
+                  <div class="round-title">
+                    <h5>Demi-final</h5>
+                  </div>
+                </div>
+                <div class="container-round-title">
+                  <div class="round-title">
+                    <h5>Final</h5>
+                  </div>
+                </div>
+                <div class="container-round-title">
+                  <div class="round-title">
+                    <h5>Vainqueur</h5>
+                  </div>
+                </div>
+              </div>
+                <!-- DEBUT DE LA SECTION ARBRE DE TOURNOIS -->
+              <div class="container-tree-tournament">
+                <!-- SVG -->
+                <svg
+                  class="tournament-lines"
+                  xmlns="http://www.w3.org/2000/svg"
+                ></svg>
+
+                <div class="round-one">
+                  <div class="cell-tournament" data-index="1">
+                    <p class="cell-team">équipe 1</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="2">
+                    <p class="cell-team">équipe 2</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="3">
+                    <p class="cell-team">équipe 3</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="4">
+                    <p class="cell-team">équipe 4</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="5">
+                    <p class="cell-team">équipe 5</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="6">
+                    <p class="cell-team">équipe 6</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="7">
+                    <p class="cell-team">équipe 7</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="8">
+                    <p class="cell-team">équipe 8</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="9">
+                    <p class="cell-team">équipe 9</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="10">
+                    <p class="cell-team">équipe 10</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="11">
+                    <p class="cell-team">équipe 11</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="12">
+                    <p class="cell-team">équipe 12</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="13">
+                    <p class="cell-team">équipe 13</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="14">
+                    <p class="cell-team">équipe 14</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="15">
+                    <p class="cell-team">équipe 15</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="16">
+                    <p class="cell-team">équipe 16</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                </div>
+                <div class="quarter-final">
+                  <div class="cell-tournament" data-index="1">
+                    <p class="cell-team">Vainqueur 1</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="2">
+                    <p class="cell-team">Vainqueur 2</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="3">
+                    <p class="cell-team">Vainqueur 3</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="4">
+                    <p class="cell-team">Vainqueur 4</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="5">
+                    <p class="cell-team">Vainqueur 5</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="6">
+                    <p class="cell-team">Vainqueur 6</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="7">
+                    <p class="cell-team">Vainqueur 7</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="8">
+                    <p class="cell-team">Vainqueur 8</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                </div>
+                <div class="semi-final">
+                  <div class="cell-tournament" data-index="1">
+                    <p class="cell-team">Demi-finaliste 1</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="2">
+                    <p class="cell-team">Demi-finaliste 2</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="3">
+                    <p class="cell-team">Demi-finaliste 3</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="4">
+                    <p class="cell-team">Demi-finaliste 4</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                </div>
+                <div class="final">
+                  <div class="cell-tournament" data-index="1">
+                    <p class="cell-team">Finaliste 1</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                  <div class="cell-tournament" data-index="2">
+                    <p class="cell-team">Finaliste 2</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                </div>
+                <div class="winner">
+                  <div class="cell-tournament" data-index="1">
+                    <p class="cell-team">Vainqueur Final</p>
+                    <span class="cell-result"> 0</span>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -256,5 +425,6 @@
 
     <script src="../assets/javascript/tournamentSheet.js"></script>
     <script src="../assets/javascript/animationNavbar.js"></script>
+    <script src="../assets/javascript/tournamentTreeSVG.js"></script>
   </body>
 </html>
