--- a/html/tournamentTree.html
+++ b/html/tournamentTree.html
@@ -3,8 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- font ROBOTO CONDENSED -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <!----------------------------------- -->
     <title>Arbre de tournoi</title>
     <link rel="stylesheet" href="../assets/css/tournamentTree.css" />
+    
   </head>
   <body>
     <div class="main-container-tree-tournament">
@@ -37,6 +46,9 @@
       </div>
 
       <div class="container-tree-tournament">
+        <!-- SVG -->
+        <svg class="tournament-lines" xmlns="http://www.w3.org/2000/svg"></svg>
+
         <div class="round-one">
           <div class="cell-tournament" data-index="1">
             <p class="cell-team">équipe 1</p>
@@ -174,6 +186,6 @@
       </div>
     </div>
 
-    <script src="../assets/javascript/tournamentTree.js"></script>
+    <script src="../assets/javascript/tournamentTreeSVG.js"></script>
   </body>
 </html>
