--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
     <!----------------------------------- -->
     <link rel="stylesheet" href="../assets/css/index.css" />
     <link rel="stylesheet" href="../assets/css/navbar.css">
-    <link rel="stylesheet" href="../assets/css/footer.cssi">
+    <link rel="stylesheet" href="../assets/css/footer.css">
   </head>
 
   <body>
