--- a/html/profilPrivate.html
+++ b/html/profilPrivate.html
@@ -184,8 +184,8 @@
                   <option value="belgique">Belgique</option>
                   <option value="suisse">Suisse</option>
                 </select>
-                <div class="container-cta">
-                  <button class="cta" id="button-general">Mettre a jour</button>
+                <div class="container-button-update">
+                  <button class="button-update" id="button-general">Mettre a jour</button>
                 </div>
               </div>
             </div>
@@ -226,8 +226,8 @@
                 <p class="message-error password-error-confirm">
                   Le mot de passe ne correspond pas.
                 </p>
-                <div class="container-cta">
-                  <button class="cta" id="button-change-password">
+                <div class="container-button-update">
+                  <button class="button-update" id="button-change-password">
                     Mettre a jour
                   </button>
                 </div>
@@ -253,13 +253,13 @@
                 />
                 <label for="new-mail">Nouvelle email : </label>
                 <input name="new-mail" id="new-mail" type="text" required />
-                <div class="container-cta">
+                <div class="container-button-update">
                   <p class="message-error new-email-error">
                     Entrer une adresse email valide.
                   </p>
                   
                 </div>
-                <button class="cta" id="button-change-mail">
+                <button class="button-update" id="button-change-mail">
                   Mettre a jour
                 </button>
               </div>
@@ -282,8 +282,8 @@
                   id="delete-account"
                   type="password"
                 />
-                <div class="container-cta">
-                  <button class="cta">Supprimer</button>
+                <div class="container-button-update">
+                  <button class="button-update">Supprimer</button>
                 </div>
               </div>
             </div>
