--- a/html/tournamentManagement.html
+++ b/html/tournamentManagement.html
@@ -176,15 +176,15 @@
                 3e & 5e : Lorem ipsum dolor sit amet,
               </p>
             </div>
-            <div class="container-cta">
-              <button class="cta">
+            <div class="container-button-info-general">
+              <button class="button-info-general">
                 <a href="./TournamentModifcation.html" target="_blank"
                   >Modifier</a
                 >
               </button>
             </div>
-            <div class="container-cta">
-              <button class="cta">
+            <div class="container-button-info-general">
+              <button class="button-info-general">
                 <a href="./tournamentSheet.html" target="_blank"
                   >Feuille du tournoi</a
                 >
