séparation du style des cardTournament dans un fichier css a part

--- a/html/profilPrivate.html
+++ b/html/profilPrivate.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="../assets/css/navbar.css" />
     <link rel="stylesheet" href="../assets/css/footer.css" />
     <link rel="stylesheet" href="../assets/css/profilPrivate.css" />
+    <link rel="stylesheet" href="../assets/css/cardResumeTournament.css">
   </head>
   <body>
     <header>
