--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../assets/css/index.css" />
     <link rel="stylesheet" href="../assets/css/navbar.css">
     <link rel="stylesheet" href="../assets/css/footer.css">
+    <link rel="stylesheet" href="../assets/css/cardResumeTournament.css">
   </head>
 
   <body>
